--- a/FallstudieClient/.classpath
+++ b/FallstudieClient/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="C:/Users/Andi/Downloads/swingx-1.6.1.jar/swingx-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andi/Downloads/jfreechart-1.0.16/jfreechart-1.0.16/lib/jfreechart-1.0.16.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andi/Downloads/jfreechart-1.0.16/jfreechart-1.0.16/lib/jcommon-1.0.20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
